resources/manifest/usuario-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: usuario-service
spec:
  selector:
    app: usuario-deploy
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
